button-not added

--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -56,43 +56,19 @@
   </div>
   <div class="mb-7 mx-3 tablet-mx-14 desktop-mx-26">
     <h3>Similar programs</h3>
-    <div class="grid grid-cols-2 gap-2 desktop:grid-cols-3 desktop:gap-x-2">
-      {% for program in post.meta('similar_programs') %}
-      <div>
-      {% include 'employer-programs/employer-program.twig' with { post: program } %}
+  <div class="carousel-container">
+    <div class="inner-carousel">
+      <div class="track grid grid-cols-2 gap-2 desktop:grid-cols-3 desktop:gap-x-2">
+        {% for program in post.meta('similar_programs') %}
+        <div class="card-container">
+        {% include 'employer-programs/employer-program.twig' with { post: program } %}
+        </div>
+        {% endfor %}
+        <div class="nav">
+          <button class="prev"><i class="fas fa-arrow-left fa-2x"></i></button>
+          <button class="next"><i class="fas fa-arrow-right fa-2x"></i></button>
+        </div>
       </div>
-      {% endfor %}
-      <div class="carousel-container">
-  <div class="inner-carousel">
-    <div class="track">
-      <div class="card-container">
-        <div class="card card1"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card2"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card3"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card4"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card5"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card6"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card7"></div>
-      </div>
-      <div class="card-container">
-        <div class="card card8"></div>
-      </div>
-    </div>
-    <div class="nav">
-      <button class="prev"><i class="fas fa-arrow-left fa-2x"></i></button>
-      <button class="next"><i class="fas fa-arrow-right fa-2x"></i></button>
     </div>
   </div>
 </div>
