--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -4,7 +4,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-<div>
+<div class="page-max">
   <header class="mt-5 tablet:mt-6 desktop:mt-7 mx-3 tablet-mx-14 desktop-mx-26">
     <div class="w-full grid tablet:grid-cols-[1fr_4fr] tablet:gap-x-4 ">
       <img class="w-[200px]" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
