--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -55,14 +55,14 @@
     </div>
   </div>
   <div class="mb-7 mx-3 tablet-mx-14 desktop-mx-26">
-    <h3>Similar programs</h3>
-    <div class="nav">
-      <button class="prev">
+    <div class="nav flex">
+      <h3>Similar programs</h3>
+      <button class="prev float-right ml-auto">
         <svg aria-hidden="true" class="option__graphic" tabindex="-1">
           <use href="#left-arrow"></use>
         </svg>
       </button>
-      <button class="next">
+      <button class="next float-right ml-auto">
         <svg aria-hidden="true" class="option__graphic" tabindex="-1">
           <use href="#right-arrow"></use>
         </svg>
