--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -58,12 +58,12 @@
     <div class="nav flex">
       <h3>Similar programs</h3>
       <button class="prev float-right ml-auto">
-        <svg aria-hidden="true" class="option__graphic" tabindex="-1">
+        <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
           <use href="#left-arrow"></use>
         </svg>
       </button>
-      <button class="next float-right ml-auto">
-        <svg aria-hidden="true" class="option__graphic" tabindex="-1">
+      <button class="next float-right">
+        <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
           <use href="#right-arrow"></use>
         </svg>
       </button>
