--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -4,8 +4,8 @@
 {% extends "base.twig" %}
 
 {% block content %}
-<div class="page-max">
-  <header class="mt-5 tablet:mt-6 desktop:mt-7 mx-3 tablet-mx-14 desktop-mx-26 bg-[#EEF4FF]">
+<header class="bg-[#EEF4FF]">
+  <div class="py-5 tablet:py-6 desktop:py-7 px-3 tablet:px-7 desktop:px-[104px] page-max">
     {% include 'components/breadcrumbs.twig' with {
         crumbs: [
           {
@@ -15,16 +15,24 @@
         ]
       }
     %}
-    <div class="w-full grid tablet:grid-cols-[1fr_4fr] tablet:gap-x-4 ">
+    <div class="w-full grid desktop:grid-cols-[1fr_4fr] desktop:gap-x-4 mt-3 tablet:mt-5 desktop:mt-6">
       <img class="w-[200px]" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
       <div>
-        <div class="o-header__title">
+        <div class="o-header__title mt-3 tablet:mt-4 desktop:mt-0">
           <h1 id="page-heading" class="o-header__heading">{{ post.employer_program_title }}</h1>
         </div>
 
-        <h6>{{ post.employer_program_preview }}</h6>
+        <p class="mt-1 tablet:mt-2">{{ post.employer_program_preview }}</p>
+        {% if post.meta('header_link') %}
+        <a href="{{ post.meta('header_link').url }}" target="{{ post.meta('header_link').target }}" class="text-[#30374F] no-underline mt-2 tablet:mt-3">
+          <h6 class="font-bold">{{ post.meta('header_link').title }}</h6>
+        </a>
+        {% endif %}
       </div>
-  </header>
+    </div>
+  </div>
+</header>
+<div class="page-max">
   <div class="mt-7 grid desktop:grid-cols-[2fr_1fr] desktop:gap-x-[100px] mx-3 tablet-mx-14 desktop-mx-26">
     <div class="mb-4 tablet:mb-5 desktop:mb-7">
       {% for section in post.meta('sections') %}
@@ -68,7 +76,7 @@
       {% endif %}
     </div>
   </div>
-  <div class="mt-5 tablet:mt-6 desktop:mt-7 mb-7 mx-3 tablet-mx-14 page-max desktop-mx-26">
+  <div class="mt-5 tablet:mt-6 desktop:mt-7 mb-7 mx-3 tablet-mx-14 desktop-mx-26">
     <h3>{{ __('Similar services', 'WNYC') }}</h3>
     <div class="grid grid-cols-2 gap-2 desktop:grid-cols-3 desktop:gap-x-2">
       {% for program in post.meta('similar_programs') %}
