--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -49,45 +49,108 @@
   max-width: var(--nyco-dimension-site-max-width);
 }
 
-/*Carousal css*/
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
-img {
-  max-width: 100%;
-}
-@media screen and (min-width:1112px) { 
-  .carousel-container {
-    width: 100%;
-    position: relative;
+@media (min-width: 768px) {
+  .container {
+      width: 750px;
   }
 }
-@media (max-width: 768px) {
-  .carousel-container {
-    width: 95%;
+@media (min-width: 992px) {
+  .container {
+      width: 970px;
   }
 }
-.inner-carousel {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
-}
-.track {
-  display: inline-flex;
-  height: 100%;
-  transition: transform 0.2s ease-in-out;
-}
-.card-container {
-  width: 275px;
-  height: 400px;
-  flex-shrink: 0;
-  padding-right: 10px;
-}
-@media (max-width: 768px) {
-  .card-container {
-    width: 184px;
+@media (min-width: 1200px) {
+  .container {
+      width: 1170px;
   }
+}
+
+
+
+@media (max-width: 767px) {
+#featureContainer .carousel-inner .carousel-item > div {
+display: none;
+}
+#featureContainer .carousel-inner .carousel-item > div:first-child {
+display: block;
+}
+}
+
+#featureContainer .carousel-inner .carousel-item.active,
+#featureContainer .carousel-inner .carousel-item-next,
+#featureContainer .carousel-inner .carousel-item-prev {
+display: flex;
+}
+
+/* medium and up screens */
+@media (min-width: 768px) {
+
+#featureContainer .carousel-inner .carousel-item-end.active,
+#featureContainer .carousel-inner .carousel-item-next {
+transform: translateX(25%);
+}
+
+#featureContainer .carousel-inner .carousel-item-start.active, 
+#featureContainer .carousel-inner .carousel-item-prev {
+transform: translateX(-25%);
+}
+#featureContainer .card img{
+width: 90%;
+height: 40vh;
+}
+#featureContainer .carousel-item{
+justify-content: space-between;
+}
+}
+@media (max-width: 767px) {
+#featureContainer .card img{
+width: 100%;
+height: 75vh;
+}
+}
+#featureContainer .carousel-inner .carousel-item-end,
+#featureContainer .carousel-inner .carousel-item-start { 
+transform: translateX(0);
+}
+#featureContainer .card{
+border: 0;
+}
+#featureContainer .card{
+position: relative;
+}
+#featureContainer .card .card-img-overlays{
+position: absolute;
+bottom: 15%;
+left: 10%;
+color: #fff;
+font-weight: bolder;
+}
+#featureContainer a{
+text-decoration: none;
+}
+#featureContainer .indicator{
+border: 1px solid rgb(202, 202, 202);
+padding: 3px 6px 3px 6px;
+}
+#featureContainer .indicator:hover{
+background-color: blue;
+border: 1px solid blue;
+transition: 200ms;
+}
+#featureContainer .indicator:hover{
+color: white;
+transition: 200ms;
+}
+#featureContainer .indicator {
+color: lightgray;
+}
+#featureContainer .float-end{
+padding-top: 10px;
 }
 
