--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -4,6 +4,9 @@
 {% extends "base.twig" %}
 
 {% block content %}
+<link href="https://www.jqueryscript.net/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+   
 <div>
   <header class="mt-5 tablet:mt-6 desktop:mt-7 mx-3 tablet-mx-14 desktop-mx-26">
     <div class="w-full grid tablet:grid-cols-[1fr_4fr] tablet:gap-x-4 ">
@@ -55,34 +58,53 @@
     </div>
   </div>
   <div class="mb-7 mx-3 tablet-mx-14 desktop-mx-26">
-    <div class="nav flex">
-      <h3>Similar programs</h3>
-      <button class="prev float-right ml-auto">
-        <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
-          <use href="#left-arrow"></use>
-        </svg>
-      </button>
-      <button class="next float-right">
-        <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
-          <use href="#right-arrow"></use>
-        </svg>
-      </button>
-    </div>
-    <div class="carousel-container">
-      <div class="inner-carousel">
-        <div class="track grid grid-cols-2 gap-2 desktop:grid-cols-3 desktop:gap-x-2">
-          {% for program in post.meta('similar_programs') %}
-          <div class="card-container">
-          {% include 'employer-programs/employer-program.twig' with { post: program } %}
-          </div>
-          {% endfor %}
+   
+    {#  slider  #}
 
-        </div>
-      </div>
-    </div>
+  <div class="container" id="featureContainer">
+		<div class="row mx-auto my-auto justify-content-center">
+			<div id="featureCarousel" class="carousel slide" data-bs-ride="carousel">
+			  <h3>Similar programs</h3>
+				<div class="float-end pe-md-4">
+					<a class="indicator" href="#featureCarousel" role="button" data-bs-slide="prev">
+						<span class="fas fa-chevron-left" aria-hidden="true">
+              <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
+                <use href="#left-arrow"></use>
+              </svg>
+            </span>
+					</a> &nbsp;&nbsp;
+					<a class="w-aut indicator" href="#featureCarousel" role="button" data-bs-slide="next">
+						<span class="fas fa-chevron-right" aria-hidden="true">
+            <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
+              <use href="#right-arrow"></use>
+            </svg>
+            </span>
+					</a>
+				</div>
+				<div class="carousel-inner" role="listbox">
+          {% for program in post.meta('similar_programs') %}
+					<div class="carousel-item {% if loop.first %}active{% endif %}">
+						<div class="col-md-3">
+							<div class="card">
+							  <div>
+                {% include 'employer-programs/employer-program.twig' with { post: program } %}
+                </div>
+								<div class="card-img-overlays">Slide 1</div>
+							</div>
+						</div>
+					</div>
+		     {% endfor %}
+				</div>
+				
+			</div>
+		</div>
+  </div>
+    {# slider end #}
   </div>
   </div>
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 {% endblock %}
 
