--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -21,7 +21,7 @@
             {% else %}
                 {% set footer_menu_to_use = job_seeker_footer_menu %}
             {% endif %}
-            {% for m in employer_footer_menu.get_items %}
+            {% for m in footer_menu_to_use.get_items %}
                 <a class="inline mr-2 desktop:mr-3 tablet:mr-3" href="{{ m.link }}"
                 {% if m.attr_title %}title="{{ m.attr_title }}"{% endif %}
                 {% if m.target %}target="{{ m.target }}"{% endif %}
