replace jobready logo on jobseeker home page

--- a/wp-content/themes/workingnyc/views/home.twig
+++ b/wp-content/themes/workingnyc/views/home.twig
@@ -15,9 +15,9 @@
           <div class="text-center">
             <h1 id="page-heading" class="m-0" style="line-height: 0">
               <svg class="fill-text stroke-text text-brand" width="256" height="79" role="img">
-                <title>Job Ready by Jobs N Y C</title>
+                <title>Jobs N Y C</title>
 
-                <use href="#logo-jnyc-horizontal-w-ribbon"></use>
+                <use href="#logo-jnyc-horizontal"></use>
               </svg>
             </h1>
           </div>
