--- a/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
@@ -1,7 +1,7 @@
 {# @Type   Component #}
 {# @For    Post Type #}
 {# @Class  timber-posts/Programs.php #}
-<article class="rounded border border-scale-3 p-3">
+<article class="rounded border border-scale-3 p-3 carousal-item-width">
   <header class="border-b border-scale-3 pb-2">
     <img class="w-[50px] h-5 mb-3 object-cover" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
     <a href="{{ post.link }}">
