--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -4,6 +4,9 @@
 
 // Creating classes as copies of the tailwind classes because some imports aren't working
 @media screen and (min-width:1112px) { 
+    .carousal-item-width {
+      width: 400px;
+    }
     .desktop-py-121 {
       padding-top: 121px;
       padding-bottom: 121px;
@@ -27,6 +30,9 @@
     }
 }
 @media screen and (min-width: 768px) and (max-width:1112px) {
+  .carousal-item-width {
+    width: 300px;
+  }
   .tablet-py-48 {
       padding-top: 48px;
       padding-bottom: 48px;
@@ -49,31 +55,16 @@
   max-width: var(--nyco-dimension-site-max-width);
 }
 
-.container {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+#featureContainer .carousel-inner .carousel-item.active,
+#featureContainer .carousel-inner .carousel-item-next,
+#featureContainer .carousel-inner .carousel-item-prev {
+display: flex;
 }
-@media (min-width: 768px) {
-  .container {
-      width: 750px;
+/* mobile */
+@media (max-width: 768px) {
+  .carousal-item-width {
+    width: 400px;
   }
-}
-@media (min-width: 992px) {
-  .container {
-      width: 970px;
-  }
-}
-@media (min-width: 1200px) {
-  .container {
-      width: 1170px;
-  }
-}
-
-
-
-@media (max-width: 767px) {
 #featureContainer .carousel-inner .carousel-item > div {
 display: none;
 }
@@ -82,75 +73,12 @@ display: block;
 }
 }
 
-#featureContainer .carousel-inner .carousel-item.active,
-#featureContainer .carousel-inner .carousel-item-next,
-#featureContainer .carousel-inner .carousel-item-prev {
-display: flex;
+/* tablet and desktop*/
+@media screen and (min-width: 768px) {
+  #featureContainer .carousel-item{
+  justify-content: space-between;
+  }
 }
 
-/* medium and up screens */
-@media (min-width: 768px) {
 
-#featureContainer .carousel-inner .carousel-item-end.active,
-#featureContainer .carousel-inner .carousel-item-next {
-transform: translateX(25%);
-}
-
-#featureContainer .carousel-inner .carousel-item-start.active, 
-#featureContainer .carousel-inner .carousel-item-prev {
-transform: translateX(-25%);
-}
-#featureContainer .card img{
-width: 90%;
-height: 40vh;
-}
-#featureContainer .carousel-item{
-justify-content: space-between;
-}
-}
-@media (max-width: 767px) {
-#featureContainer .card img{
-width: 100%;
-height: 75vh;
-}
-}
-#featureContainer .carousel-inner .carousel-item-end,
-#featureContainer .carousel-inner .carousel-item-start { 
-transform: translateX(0);
-}
-#featureContainer .card{
-border: 0;
-}
-#featureContainer .card{
-position: relative;
-}
-#featureContainer .card .card-img-overlays{
-position: absolute;
-bottom: 15%;
-left: 10%;
-color: #fff;
-font-weight: bolder;
-}
-#featureContainer a{
-text-decoration: none;
-}
-#featureContainer .indicator{
-border: 1px solid rgb(202, 202, 202);
-padding: 3px 6px 3px 6px;
-}
-#featureContainer .indicator:hover{
-background-color: blue;
-border: 1px solid blue;
-transition: 200ms;
-}
-#featureContainer .indicator:hover{
-color: white;
-transition: 200ms;
-}
-#featureContainer .indicator {
-color: lightgray;
-}
-#featureContainer .float-end{
-padding-top: 10px;
-}
 
