--- a/wp-content/themes/workingnyc/views/employer-programs/single.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/single.twig
@@ -61,37 +61,30 @@
    
     {#  slider  #}
 
-  <div class="container" id="featureContainer">
-		<div class="row mx-auto my-auto justify-content-center">
-			<div id="featureCarousel" class="carousel slide" data-bs-ride="carousel">
-			  <h3>Similar programs</h3>
-				<div class="float-end pe-md-4">
-					<a class="indicator" href="#featureCarousel" role="button" data-bs-slide="prev">
-						<span class="fas fa-chevron-left" aria-hidden="true">
+        <div class="nav flex mb-5">
+			    <h3>Similar programs</h3>
+            <a class="indicator ml-auto" href="#featureCarousel" role="button" data-bs-slide="prev">
+              <span class="fas fa-chevron-left" aria-hidden="true">
+                <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
+                  <use href="#left-arrow"></use>
+                </svg>
+              </span>
+            </a>
+            <a class="w-aut indicator" href="#featureCarousel" role="button" data-bs-slide="next">
+              <span class="fas fa-chevron-right" aria-hidden="true">
               <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
-                <use href="#left-arrow"></use>
+                <use href="#right-arrow"></use>
               </svg>
-            </span>
-					</a> &nbsp;&nbsp;
-					<a class="w-aut indicator" href="#featureCarousel" role="button" data-bs-slide="next">
-						<span class="fas fa-chevron-right" aria-hidden="true">
-            <svg aria-hidden="true" class="option__graphic m-auto border" tabindex="-1">
-              <use href="#right-arrow"></use>
-            </svg>
-            </span>
-					</a>
-				</div>
+              </span>
+            </a>
+        </div>
+  <div class="container" id="featureContainer">
+		<div class="row my-auto justify-content-center">
+			<div id="featureCarousel" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-inner" role="listbox">
           {% for program in post.meta('similar_programs') %}
 					<div class="carousel-item {% if loop.first %}active{% endif %}">
-						<div class="col-md-3">
-							<div class="card">
-							  <div>
                 {% include 'employer-programs/employer-program.twig' with { post: program } %}
-                </div>
-								<div class="card-img-overlays">Slide 1</div>
-							</div>
-						</div>
 					</div>
 		     {% endfor %}
 				</div>
