--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -4,9 +4,10 @@
 <div class="bg-white">
 
     <div class="layout-content text-center py-5">
-        <h1>{{ post.post_title }}</h1>
-
+      <svg aria-hidden="true"><use href="#Telent-Portal-logo"></use></svg>
+      <div>
         {{ post.post_content }}
+      </div>
     </div>
 
     <div class="relative">
