the-feedback-btn-changes--and-removed-line

--- a/wp-content/themes/workingnyc/views/objects/global-footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/global-footer.twig
@@ -19,10 +19,11 @@
         </div>
     </nav>
     <nav class="o-attribution__flex border-grey-light pt-3 desktop:pt-3">
-        <div>
-        <span class="text-sm">
-            {{ __('© ' ~ 'now' | date('Y') ~ ' City of New York,', 'WNYC') ~ ' ' ~ __('All Rights Reserved.', 'WNYC') }}
-            {{ __('NYC is a trademark and service mark of the City of New York.', 'WNYC') }}</span>
-        </div>
+       <div>
+    <span class="text-sm">
+        {{ __('© ' ~ 'now' | date('Y') ~ ' City of New York,', 'WNYC') ~ ' | ' ~ __('All Rights Reserved.', 'WNYC') }}
+        {{ __('NYC is a trademark and service mark of the City of New York.', 'WNYC') }}
+    </span>
+</div>
     </nav>
 </footer>
