--- a/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/margins/_margins.scss
@@ -9,6 +9,10 @@
     .accordion-item.active .accordion-content {
       display: block;
      }
+     .footer-font{
+      font-size: 22px;
+      font-weight: 500;
+     }
 @media screen and (min-width:1112px) { 
     .desktop-py-121 {
       padding-top: 121px;
