--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -1,16 +1,19 @@
 {% if talent_portal_landing_page == false %}
     <footer aria-label="{{ __('Footer', 'WNYC') }}" class="relative px-2 py-3 tablet:px-8 tablet:py-5 " role="contentinfo">
-    <div class="pb-3 desktop:pb-5">
-    <nav class="o-attribution__flex pb-3"> 
-        <div class="tablet:float-left desktop:float-left pb-2 tablet:pb-0 desktop:pb-0">
+    <div>
+    <nav class="o-attribution__flex items-start">
+        <div class="grid gap-y-4">
+            <div>
+            <span class="footer-font">Let us know how we can improve</span>
+            </div>
+            <div class="tablet:float-left desktop:float-left">
+            {# TODO: feedback URL should come from global field + shortcode #}
+            <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" href="https://airtable.com/appHMkkbuN08pgjwz/shrfQGpXvo9mmmHpJ">Send us feedback</a>
+            </div>
+        </div>
+        <div class="tablet:float-right desktop:float-right pb-2 tablet:pb-0 desktop:pb-0">
         <h5>{{ options.feedback_prompt }}</h5>
         </div>
-        <div class="tablet:float-right desktop:float-right">
-        {# TODO: feedback URL should come from global field + shortcode #}
-        <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" href="https://airtable.com/appHMkkbuN08pgjwz/shrfQGpXvo9mmmHpJ">Send us feedback</a>
-        </div>
-    </nav>
-    <nav class="o-attribution__flex border-t border-slate-300 pt-3 items-start">
         <div class="tablet:float-left desktop:float-left pb-2 tablet:pb-0 desktop:pb-0">
         <span>
         {{ employer ? options.employers_footer_tagline : options.job_seekers_footer_tagline }}</span>
