the-container-size-changed

--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -10,7 +10,7 @@
     {% else %}
       <div class="desktop:hidden pb-5 tablet-h-400 mobile-h-300">
     {% endif %}
-        <img class="bg-image-square tablet:block" src="{{ this.fields.container_image }}"/>
+        <img class="tablet:block" src="{{ this.fields.container_image }}"/>
       </div>
       <div class="desktop-max-h-304 desktop-w-660">
         <h2 class="mb-3 tablet:mb-4">{{ this.heading }}</h2>
