button-size-and-color-changed

--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -21,12 +21,12 @@
                 <div class="mx-3 tablet:mx-auto desktop:ml-auto desktop:mr-0 tablet:w-4/5 grid bg-white p-4">
                     <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_1') }}</h3>
                     <p class="mx-auto mb-4 text-center">{{ post.meta('description_1') }}</p>
-                    <a class="mx-auto btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
+                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ post.meta('button_link_1') }}">{{ post.meta('button_label_1') }}</a>
                 </div>
                 <div class="mx-3 tablet:mx-auto desktop:mr-auto desktop:ml-0 tablet:w-4/5 grid bg-white p-4">
                     <h3 class="mx-auto mb-4 text-center">{{ post.meta('subtitle_2') }}</h3>
                     <p class="mx-auto mb-4 text-center">{{ post.meta('description_2') }}</p>
-                    <a class="mx-auto btn btn-small tablet:btn btn-primary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
+                    <a class="mx-auto btn tablet:btn btn-secondary pointer-events-auto" href="{{ post.meta('button_link_2') }}">{{ post.meta('button_label_2') }}</a>
                 </div>
             </div>
         </div>
