change-the-collection-header-size-h2

--- a/wp-content/themes/workingnyc/views/components/collection.twig
+++ b/wp-content/themes/workingnyc/views/components/collection.twig
@@ -11,7 +11,7 @@
       {% if this.heading or this.description %}
        
      
-            <h2 class="h3 text-alt mt-0" data-active-navigation-item="focus">{{ this.heading }}</h2>
+            <h2 class="text-alt mt-0" data-active-navigation-item="focus">{{ this.heading }}</h2>
 
             {{ this.description }}
   
