--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -4,7 +4,7 @@
 <div class="bg-scale-1">
   <header class="employer-header-gradient {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full flex justify-center">
       {% if post.thumbnail %}
-      <div class="desktop:gap-x-5 tablet-gap-x-56 desktop:flex desktop:pl-[104px] site-max-width w-full desktop:px-0 tablet:px-5 px-2 py-4 tablet:py-5 desktop:py-0">
+      <div class="desktop:gap-x-5 tablet-gap-x-56 desktop:flex desktop:pl-[104px] site-max-width w-full desktop:px-0 tablet:px-5 px-2 py-4 tablet:py-5 desktop:py-0 items-center">
         <div class="desktop-py-121">
       {% else %}
       <div class="layout-content">
@@ -25,10 +25,8 @@
           </div>
         </div>
     {% if post.thumbnail %}
-      <div class="hidden desktop:block">
-        <div class="inline-block">
-          <img class="mt-7" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
-        </div>
+      <div class="hidden desktop:flex desktop-py-121">
+          <img class="" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
       </div>
     {% endif %}
     </div>
