--- a/wp-content/themes/workingnyc/views/employer-home-page.twig
+++ b/wp-content/themes/workingnyc/views/employer-home-page.twig
@@ -4,8 +4,8 @@
 <div class="bg-scale-1">
   <header class="employer-header-gradient {% if post.thumbnail %}bg-shape-wnyc-header{% endif %} w-full flex justify-center">
       {% if post.thumbnail %}
-      <div class="desktop:gap-x-5 tablet-gap-x-56 desktop:flex desktop:pl-[104px] site-max-width w-full desktop:px-0 tablet:px-5 px-2 py-4 tablet:py-5 desktop:py-0 items-center">
-        <div class="desktop-py-121">
+      <div class="site-max-width w-full desktop:gap-x-5 tablet-gap-x-56 desktop:flex desktop:px-[104px] tablet:px-5 px-2 py-4 tablet:py-5 desktop:py-[121px] items-center">
+        <div>
       {% else %}
       <div class="layout-content">
         <div class="wrap">
@@ -25,7 +25,7 @@
           </div>
         </div>
     {% if post.thumbnail %}
-      <div class="hidden desktop:flex desktop-py-121">
+      <div class="hidden desktop:block">
           <img class="" src="{{ post.thumbnail.src('desktop') }}" alt="{{ post.thumbnail.alt }}"/>
       </div>
     {% endif %}
