--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -27,7 +27,7 @@
           {% set container_button_class = 'btn-styled' %}
         {% endif %}
 
-        <a class="mt-2 btn btn-small tablet:btn {{ container_button_class }} pointer-events-auto" href="{{ this.fields.container_button_link }}">{{ this.fields.container_button_text }}</a>
+        <a class="mt-2 btn btn-small tablet:btn {{ container_button_class }} pointer-events-auto" href="{{ function('convert_link_locale', this.fields.container_button_link, site.site_url, site.url) }}">{{ this.fields.container_button_text }}</a>
       </div>
     {% if this.fields.container_image_side == 'right' %}
       <div class="desktop-w-500 desktop-h-400 hidden desktop:block">
