--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -19,11 +19,11 @@
     <span class="hidden tablet:block desktop-font-size-13">{{ __('Official website of the City of New York', 'WNYC - Navigation') }}</span>
   </div>
   <div class="flex items-center">
-    <button class="border-b-line py-1 px-1 flex items-center" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
+    <button class="py-1 px-1 flex items-center" aria-controls="aria-c-text-controller" aria-expanded="false" data-dialog="open" data-dialog-lock="true" data-js="dialog">
       <svg class="h-3 w-3 mr-[4px]">
         <use href="#languages-nav"></use>
       </svg>
-      <span>{{ __('Language', 'WNYC - Navigation') }}</span>
+      <span class="text-xs font-[500] desktop:text-sm">{{ __('Language', 'WNYC - Navigation') }}</span>
       <svg class="h-3 w-3 fill-none stroke-black">
         <use href="#lucide-chevron-down"></use>
       </svg>
@@ -34,7 +34,7 @@
         <title>{{__('Search', 'WNYC - Navigation')}}</title>
         <use href="#lucide-search"></use>
       </svg>
-      <span>{{__('Search', 'WNYC') }}</span>
+      <span class="font-[500]">{{__('Search', 'WNYC') }}</span>
     </button>
     <a class="flex desktop:hidden" href="{{ site.url }}/?s=">
       <svg class="icon-ui mr-[4px]">
@@ -63,7 +63,7 @@
   </div>
   <div>
     {% for menu_item in job_seeker_header_menu.get_items %}
-      <a class="o-navigation__item mr-2 desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
+      <a class="o-navigation__item mr-2 font-[500] desktop:py-2 desktop-px-12" width="84" height="70" href="{{ menu_item.link }}">{{ menu_item.title }}</a>
     {% endfor %}
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
