logos not truncated

--- a/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
+++ b/wp-content/themes/workingnyc/views/employer-programs/employer-program.twig
@@ -3,7 +3,7 @@
 {# @Class  timber-posts/Programs.php #}
 <article class="rounded border border-scale-3 p-3">
   <header class="border-b border-scale-3 pb-2">
-    <img class="w-[50px] h-5 mb-3 object-cover" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
+    <img class="w-[50px] h-5 mb-3 object-contain" loading="lazy" src="{{ post.meta('employer_program_logo').url }}" alt="{{ post.meta('employer_program_logo').alt }}"/>
     <a href="{{ post.link }}">
       <h5 class="pb-1">{{ post.employer_program_title }}</h5>
     </a>
