added titles to SVGs

--- a/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
@@ -8,11 +8,13 @@
     {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="60" height="11">
+        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
     <a class="hidden tablet:flex tablet:pr-2" href="https://mycity.nyc.gov/">
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+        <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-nyc-mycity"></use>
       </svg>
     </a>
@@ -41,6 +43,7 @@
       {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="100" height="18">
+        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
@@ -53,6 +56,7 @@
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="icon-ui m-0 w-3 h-3">
+      <title>{{ __('Menu', 'WNYC - Navigation') }}</title>
       <use href="#lucide-menu"></use>
     </svg>
   </button>
@@ -61,6 +65,7 @@
 <nav class="z-10 px-3 py-1 relative flex flex-col border-t-2 border-[#D4D7DC] items-center bg-white tablet:hidden" data-js="navigation">
   <a href="https://mycity.nyc.gov/">
     <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+      <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
     </svg>
   </a>
