--- a/wp-content/themes/workingnyc/views/objects/global-footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/global-footer.twig
@@ -2,6 +2,7 @@
     <nav class="o-attribution__flex border-b border-slate-200 pb-3 desktop:pb-3">
         <div class="tablet:float-left desktop:float-left pb-3 tablet:pb-0 desktop:pb-0">
             <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand pb-1" width="97" height="32">
+                <title>{{ __('NYC', 'WNYC - Navigation') }}</title>
                 <use href="#logo-nyc-black"></use>
             </svg>
             </br>
