--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -4,7 +4,10 @@
 <div class="bg-white">
 
     <div class="layout-content text-center py-5">
-      <svg aria-hidden="true" class="h-5 mb-2"><use href="#Jobs-NYC-Telent-Portal-logo"></use></svg>
+      <svg aria-hidden="true" class="h-5 mb-2">
+        <title>{{ __('Jobs NYC', 'WNYC') }}</title>
+        <use href="#Jobs-NYC-Telent-Portal-logo"></use>
+      </svg>
       <div>
         {{ post.post_content }}
       </div>
