--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -8,11 +8,13 @@
     {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="60" height="11">
+        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
     <a class="hidden tablet:flex tablet:pr-2" href="https://mycity.nyc.gov/">
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+        <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-nyc-mycity"></use>
       </svg>
     </a>
@@ -31,14 +33,12 @@
     {% include 'objects/languages-dropdown.twig' %}
     <button class="o-navigation__item mr-0" aria-controls="aria-c-search" aria-expanded="false" data-dialog="open" data-js="search">
       <svg class="icon-ui mr-[4px]">
-        <title>{{__('Search', 'WNYC - Navigation')}}</title>
         <use href="#lucide-search"></use>
       </svg>
       <span>{{__('Search', 'WNYC') }}</span>
     </button>
     <a class="flex desktop:hidden" href="{{ site.url }}/?s=">
       <svg class="icon-ui mr-[4px]">
-        <title>{{__('Search', 'WNYC - Navigation')}}</title>
         <use href="#lucide-search"></use>
       </svg>
       <span>{{__('Search', 'WNYC') }}</span>
@@ -56,6 +56,7 @@
     {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="100" height="18">
+        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
@@ -68,6 +69,7 @@
   </div>
   <button class="desktop:hidden mie-0" aria-controls="aria-c-menu" aria-expanded="false" data-js="menu" data-js-menu="open">
     <svg class="icon-ui m-0 w-3 h-3">
+      <title>{{ __('Menu', 'WNYC - Navigation') }}</title>
       <use href="#lucide-menu"></use>
     </svg>
   </button>
@@ -76,6 +78,7 @@
 <nav class="z-10 px-3 py-1 relative flex flex-col border-t-2 border-[#D4D7DC] items-center bg-white tablet:hidden" data-js="navigation">
   <a href="https://mycity.nyc.gov/">
     <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+      <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
     </svg>
   </a>
