--- a/wp-content/themes/workingnyc/views/components/container.twig
+++ b/wp-content/themes/workingnyc/views/components/container.twig
@@ -10,7 +10,7 @@
     {% else %}
       <div class="desktop:hidden pb-5 tablet-h-400 mobile-h-300">
     {% endif %}
-        <img class="tablet:block" src="{{ this.fields.container_image }}"/>
+        <img class="tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
       </div>
       <div class="desktop-max-h-304 desktop-w-660">
         <h2 class="mb-3 tablet:mb-4">{{ this.heading }}</h2>
@@ -31,7 +31,7 @@
       </div>
     {% if this.fields.container_image_side == 'right' %}
       <div class="desktop-w-500 desktop-h-400 hidden desktop:block">
-        <img class="bg-image-square tablet:block" src="{{ this.fields.container_image }}"/>
+        <img class="bg-image-square tablet:block" src="{{ this.fields.container_image.url }}" alt="{{ this.fields.container_image.alt }}"/>
       </div>
     {% endif %}
     </div>
