SVG titles describe where links go

--- a/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/employer-navigation.twig
@@ -8,7 +8,7 @@
     {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="60" height="11">
-        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
+        <title>{{ __('Jobs NYC employer homepage', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
@@ -43,7 +43,7 @@
       {% endif %}
     >
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="100" height="18">
-        <title>{{ __('Jobs NYC', 'WNYC - Navigation') }}</title>
+        <title>{{ __('Jobs NYC employer homepage', 'WNYC - Navigation') }}</title>
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
