--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -27,11 +27,11 @@
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
   <a href="{{ site.url }}">
     <svg aria-hidden="true" class="o-navigation__svg hidden tablet:flex fill-text text-brand" width="51" height="16">
-      <title>{{ __('NYC', 'WNYC - Navigation') }}</title>
+      <title>{{ __('Homepage', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-black"></use>
     </svg>
     <svg aria-hidden="true" class="o-navigation__svg tablet:hidden fill-text text-brand" width="110" height="18">
-      <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
+      <title>{{ __('Homepage', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
     </svg>
   </a>
