--- a/wp-content/themes/workingnyc/views/objects/footer.twig
+++ b/wp-content/themes/workingnyc/views/objects/footer.twig
@@ -6,8 +6,13 @@
         <h5>{{ options.feedback_prompt }}</h5>
         </div>
         <div class="tablet:float-right desktop:float-right">
-        {# TODO: feedback URL should come from global field + shortcode #}
-        <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" target="_blank" href="{{ options.feedback_form_link }}">Send us feedback</a>
+        <a class="btn btn-small tablet:btn btn-secondary pointer-events-auto" target="_blank" 
+            {% if employer %}
+            href="{{ options.feedback_form_link }}"
+            {% else %}
+            href="{{ options.feedback_form_link_jobseeker }}"
+            {% endif %}
+            >Send us feedback</a>
         </div>
     </nav>
     <nav class="o-attribution__flex border-t border-slate-300 pt-3 items-start">
