fix mycity links

--- a/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/job-seeker-navigation.twig
@@ -12,7 +12,7 @@
         <use href="#logo-jnyc-horizontal"></use>
       </svg>
     </a>
-    <a class="hidden tablet:flex tablet:pr-2" href="https://mycity.nyc.gov/">
+    <a class="hidden tablet:flex tablet:pr-2" href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
       <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
         <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
         <use href="#logo-nyc-mycity"></use>
@@ -76,7 +76,7 @@
 </nav>
 {% include 'objects/menu.twig' %}
 <nav class="z-10 px-3 py-1 relative flex flex-col border-t-2 border-[#D4D7DC] items-center bg-white tablet:hidden" data-js="navigation">
-  <a href="https://mycity.nyc.gov/">
+  <a href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
     <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
       <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
