--- a/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
+++ b/wp-content/themes/workingnyc/views/objects/landing-page-navigation.twig
@@ -1,7 +1,7 @@
 <nav aria-label="Header menu" class="z-40 bg-[#F8F9FB] desktop:bg-white px-3 relative shadow-none desktop:shadow-[2px_2px_20px_0px_#D4D7DC] desktop:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="desktop:bg-white bg-slate-300 flex justify-between">
     <div class="flex">
-      <a href="{{ site.url }}" class="my-auto">
+      <a class="my-auto" href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
         <svg aria-hidden="true" class="o-navigation__svg hidden tablet:hidden desktop:block fill-text text-brand" width="110" height="18">
           <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
           <use href="#logo-nyc-mycity"></use>
@@ -25,13 +25,9 @@
 </nav>
 <nav class="z-30 h-7 flex relative bg-white desktop:hidden px-3 py-1 shadow-none tablet:shadow-[2px_2px_20px_0px_#D4D7DC] tablet:border-0 border-b-2 border-[#D4D7DC]" data-js="navigation">
   <div class="o-navigation__home m-auto tablet:ml-0 bg-scale-1 tablet:bg-transparent">
-  <a href="{{ site.url }}">
-    <svg aria-hidden="true" class="o-navigation__svg hidden tablet:flex fill-text text-brand" width="51" height="16">
-      <title>{{ __('Homepage', 'WNYC - Navigation') }}</title>
-      <use href="#logo-nyc-black"></use>
-    </svg>
-    <svg aria-hidden="true" class="o-navigation__svg tablet:hidden fill-text text-brand" width="110" height="18">
-      <title>{{ __('Homepage', 'WNYC - Navigation') }}</title>
+  <a href="https://mycity.nyc.gov/" target="_blank" rel="noopener">
+    <svg aria-hidden="true" class="o-navigation__svg fill-text text-brand" width="110" height="18">
+      <title>{{ __('My City NYC', 'WNYC - Navigation') }}</title>
       <use href="#logo-nyc-mycity"></use>
     </svg>
   </a>
