--- a/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
+++ b/wp-content/themes/workingnyc/views/talent-portal-landing-page.twig
@@ -37,7 +37,7 @@
     </div>
 
     <div class="layout-content text-center py-5 tablet:py-6 desktop:py-7 px-2 tablet:px-7">
-        <h2 class="mb-4">{{ __('Agency Partners', 'WNYC')}}</h2>
+        <h2 class="mb-4">{{ post.meta('agency_partners_text') }}</h2>
 
         <div class="flex justify-center flex-wrap gap-3">
         {% for partner in post.meta('agency_partners') %}
