--- a/wp-content/themes/workingnyc/src/scss/utilities/colors/_colors.scss
+++ b/wp-content/themes/workingnyc/src/scss/utilities/colors/_colors.scss
@@ -11,3 +11,13 @@
 .employer-header-gradient {
     background: linear-gradient(130deg, #33488D 11.21%, #30374F 79.88%);
 }
+
+.talent-portal-gradient::before {
+    content: '';
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    background: linear-gradient(90deg, rgba(17, 19, 34, 0.80) 17.99%, rgba(17, 19, 34, 0.00) 100%);
+}
